Words are now only initialized in TextDatabase, instead of in sentences